--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile project(':android-birthday-view')
+    compile 'com.squareup:otto:1.3.6'
 }
